--- a/react-portfolio-main/src/components/About/About.module.css
+++ b/react-portfolio-main/src/components/About/About.module.css
@@ -1,109 +1,106 @@
 @import "../../vars.css";
 
 .container {
-  position: relative;
-  background-color: rgba(12, 12, 12, 0.6);
-  border-radius: 15px;
-  padding: 73px;
-  margin-top: 129px;
-  z-index: 1;
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.title {
   color: var(--color-text);
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 1.75px;
-  text-transform: uppercase;
-}
-
-.content {
+  margin-top: 120px;
+  background-color: var(--color-secondary);
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: space-between;
+  padding: 60px 10%;
+  gap: 30px;
+  border-radius: 10px;
 }
 
-.aboutImage {
-  width: 35%;
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
-
-@keyframes floating {
-  0% {
-    transform: translate(0, 0px);
-  }
-  50% {
-    transform: translate(0, 50px);
-  }
-  100% {
-    transform: translate(0, -0px);
-  }
-}
-
-
-.aboutItems {
-  color: var(--color-text);
+.text {
   display: flex;
   flex-direction: column;
-  gap: 50px;
+  justify-content: center;
+  gap: 20px;
 }
 
-.aboutItem {
+.text h2 {
+  font-size: 64px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  margin: 0;
+}
+
+.text p {
+  font-size: 24px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  margin: 0;
+}
+
+.links {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 20px;
+  flex-direction: column;
+  align-items: flex-start;
   list-style: none;
-  padding: 25px;
-  background-image: linear-gradient(
-    90deg,
-    rgba(165, 215, 232, 0.42) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  background-size: 0 100%;
-  background-repeat: no-repeat;
-  transition: 0.4s;
+  gap: 20px;
 }
 
-.aboutItem:hover {
-  background-size: 100% 100%;
+.link {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.aboutItem h3 {
-  font-size: 25px;
-  font-weight: 600;
+.link:hover {
+  transform: translateX(10px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.aboutItem p {
-  font-size: 25px;
+.link img {
+  width: 40px;
+  height: 40px;
+}
+
+.link a {
+  color: var(--color-text);
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 1.2px;
+  transition: color 0.3s ease;
+}
+
+.link a:hover {
+  color: var(--color-primary);
 }
 
 @media screen and (max-width: 830px) {
   .container {
-    background-color: transparent;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .content {
     flex-direction: column;
+    gap: 30px;
+    align-items: center;
+    padding: 40px 5%;
   }
 
-  .aboutImage {
-    display: none;
+  .text {
+    align-items: center;
   }
 
-  .aboutItems {
-    margin-top: 29px;
+  .links {
+    align-items: center;
   }
 
-  .aboutItem {
-    padding-left: 0;
-    padding-right: 0;
+  .text h2 {
+    font-size: 48px;
+  }
+
+  .text p {
+    font-size: 18px;
+  }
+
+  .link img {
+    width: 35px;
+    height: 35px;
+  }
+
+  .link a {
+    font-size: 18px;
   }
 }
