--- a/react-portfolio-main/src/components/Projects/ProjectCard.module.css
+++ b/react-portfolio-main/src/components/Projects/ProjectCard.module.css
@@ -3,59 +3,76 @@
 .container {
   display: flex;
   flex-direction: column;
-  border-radius: 10px;
+  border-radius: 15px;
   background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
-  box-shadow: 0 16px 14px 0 #04152d;
-  padding: 18px 24px;
-  max-width: 450px ;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+  padding: 24px;
+  max-width: 400px;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.container:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
 }
 
 .image {
-  margin-bottom: 26px;
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 .title {
-  font-size: 25px;
+  font-size: 34px;
   font-weight: 700;
+  color: var(--color-text);
+  margin-bottom: 10px;
+  text-align: left;
 }
 
 .description {
-  margin-top: 6px;
   font-size: 25px;
   font-weight: 400;
+  color: var(--color-text);
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .skills {
-  width: 100%;
-  margin-top: 14px;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  gap: 6px;
+  gap: 10px;
   list-style: none;
+  padding: 0;
 }
 
 .skill {
-  font-size: 25px;
-  font-weight: 400;
-  border-radius: 100px;
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--color-light-text);
   background: var(--color-dark);
-  padding: 2px 22px;
+  border-radius: 50px;
+  padding: 5px 15px;
 }
 
 .links {
-  width: 100%;
-  margin-top: 26px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
 .link {
   text-decoration: none;
   color: var(--color-text);
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 600;
-  border-radius: 100px;
+  border-radius: 50px;
   background: var(--color-primary);
-  padding: 1px 22px;
+  padding: 10px 20px;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.link:hover {
+  background-color: var(--color-primary-dark);
+  transform: scale(1.05);
 }
